# lambda-logging-example

./: Dockerfile  README.md  entrypoint.sh  pyproject.toml
src/example/: app.py
